<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LNTelBox</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_number">本机号码：%s</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_c">C</string>
    <string name="number_d">D</string>
    <string name="number_yuyin">语音通话</string>
    <string name="number_shipin">视频通话</string>
    <string name="tell">加入快捷拨号</string>
	<string name="select_photo">选择头像</string>
    <string name="yeye">爷爷</string>
    <string name="baba">爸爸</string>
    <string name="erzi">儿子</string>
    <string name="sunzi">孙子</string>
    <string name="nainai">奶奶</string>
    <string name="mama">妈妈</string>
    <string name="nver">女儿</string>
    <string name="suner">孙女</string>
    <string name="haoyou">好友</string>
    <string name="ok">接听</string>
    <string name="cancle">取消</string>
    <string name="yuyin">语音</string>
    <string name="shipin">视频</string>
    <string name="shanchu">删除</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="cut_call">结束通话</string>
    <string name="cut_phone">挂断</string>
    <string name="exit_full_screen">退出全屏</string>
    <string name="camera">摄像头</string>
    <string name="mute">静音</string>
    <string name="speaker">免提</string>
    <string name="big_small_screen">大小屏</string>
    <string name="full_screen">全屏</string>
    <string name="half_screen">1:1屏</string>
    <string name="add_short_tell">加入快捷拨号</string>
</resources>
