<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_phone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_marginBottom="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="35dp"
    android:background="@drawable/bg_ceng"
    android:orientation="vertical"
    android:visibility="gone"
    android:padding="0dp" >

    <TextView
        android:id="@+id/tv_phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="0dp"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_phonetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="0dp"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_full_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">
            <com.lianyao.ftfbox.domain.view.DyneImageView
                android:id="@+id/tv_phone_fullscreen"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_btn_full_screen"
                android:focusable="true"
                android:contentDescription="@null"
                android:padding="0dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_screen"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_half_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">
            <com.lianyao.ftfbox.domain.view.DyneImageView
                android:id="@+id/tv_phone_halfscreen"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_btn_half_screen"
                android:focusable="true"
                android:contentDescription="@null"
                android:padding="0dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/half_screen"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:visibility="gone"
            android:orientation="vertical">
            <com.lianyao.ftfbox.domain.view.DyneImageView
                android:id="@+id/tv_phone_bigsmallscreen"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_btn_big_small_screen"
                android:focusable="true"
                android:contentDescription="@null"
                android:padding="0dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/big_small_screen"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">
            <com.lianyao.ftfbox.domain.view.DyneImageView
                android:id="@+id/tv_phone_mike"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_btn_mike"
                android:focusable="true"
                android:contentDescription="@null"
                android:padding="0dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mute"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:visibility="gone"
            android:orientation="vertical">
            <com.lianyao.ftfbox.domain.view.DyneImageView
                android:id="@+id/tv_phone_speaker"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_btn_speaker"
                android:focusable="true"
                android:contentDescription="@null"
                android:padding="0dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speaker"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">
            <com.lianyao.ftfbox.domain.view.DyneImageView
                android:id="@+id/tv_phone_camera"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_btn_camera"
                android:focusable="true"
                android:contentDescription="@null"
                android:padding="0dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
    <com.lianyao.ftfbox.domain.view.DyneTextView
        android:id="@+id/tv_phone_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_phone_over"
        android:focusable="true"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/cut_phone"
        android:textColor="#ff0000"
        android:textSize="15sp" />
</LinearLayout>